# thoughtborne-windows

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  LICENSE  README.de.md  README.md  Thoughtborne-Settings.bat  Thoughtborne.bat  VISION.md  audio_handler.py  config.py  console_ui.py  hotkey_manager.py  hotkey_parse.py  key_check.py  llms-install.md  output_handler.py  personal_settings.example.json  ptt_detector.py  pyproject.toml  requirements-optional.txt  requirements.txt  settings_io.py  settings_strings.py  setup.bat  setup.ps1  test_audio_stall.py  test_console_ui.py  test_hotkey_overrides.py  test_retry_marker_lifecycle.py  test_settings_io.py  test_setup.py  test_typed_cap.py  thoughtborne.py  thoughtborne_settings.py  transcriber.py  (+1 more)
.github/workflows/: deploy-site.yml
assets/logo/: README.md
docs/: CNAME  index.html  legal.html  style.css
docs/en/: index.html  legal.html
modal_parakeet/: deploy.py  test_endpoint.py
sandbox/: README.md  thoughtborne-install-test.wsb  verify-in-sandbox.ps1
